<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Avicola</string>
    <string name="territory_all">All</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Info -->
    <string name="info_no_items">No items found.</string>
    <string name="help_text_headline">Tip:</string>
    <string name="help_text">Welcome to The Poultry Site App.  The latest poultry news at the tip of your finger.</string>
    <string name="help_text_dismiss_button">OK</string>

    <!-- Errors -->
    <string name="err_fetch_data">Could not get new data, please try again later.</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_home">Home</string>
    <string name="action_apps">Apps</string>
    <string name="action_help">Help</string>

    <!-- Tabs -->
    <string name="tab_all">All</string>
    <string name="tab_news">News</string>
    <string name="tab_events">Events</string>

    <!-- Settings -->
    <string name="pref_territory">Select territory</string>
    <string name="pref_territory_summary">Filter the list by territory</string>
    <string name="pref_territory_title">Territory name</string>
    <string name="pref_tracking">Tracking</string>
    <string name="pref_enable_ga">Enable google analytics</string>
    <string name="pref_exit">Save and exit</string>

    <!-- Favorites -->
    <string name="fav_added">Item was added to the favorites.</string>
    <string name="fav_removed">Item was removed from favorites.</string>

    <!-- Rate the app -->
    <string name="rate_title">Rate the app</string>
    <string name="rate_description">If you like our app, please let us know about it.</string>
    <string name="rate_positive">Sure</string>
    <string name="rate_negative">No, thanks</string>

</resources>
