<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/drawerRootScroller"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/drawerRoot"
        >

        <LinearLayout
            android:id="@+id/home"
            style="@style/drawerItemRoot"
            android:visibility="gone"
            >

            <ImageView
                android:src="@drawable/ic_home"
                style="@style/drawerItemIcon"
                />

            <TextView
                android:text="@string/action_home"
                style="@style/drawerItemText"
                />

        </LinearLayout>

        <ImageView
            android:visibility="gone"
            style="@style/drawerDivider"
            />

        <LinearLayout
            android:id="@+id/favorites"
            style="@style/drawerItemRoot"
            >

            <ImageView
                android:src="@drawable/ic_action_favorite"
                style="@style/drawerItemIcon"
                />

            <TextView
                android:text="@string/action_favorites"
                style="@style/drawerItemText"
                />

        </LinearLayout>

        <ImageView
            style="@style/drawerDivider"
            />

        <LinearLayout
            android:id="@+id/apps"
            style="@style/drawerItemRoot"
            >

            <ImageView
                android:src="@drawable/ic_apps"
                style="@style/drawerItemIcon"
                />

            <TextView
                android:text="@string/action_apps"
                style="@style/drawerItemText"
                />

        </LinearLayout>

        <ImageView
            style="@style/drawerDivider"
            />

        <LinearLayout
            android:id="@+id/settings"
            style="@style/drawerItemRoot"
            >

            <ImageView
                android:src="@drawable/ic_action_settings"
                style="@style/drawerItemIcon"
                />

            <TextView
                android:text="@string/action_settings"
                style="@style/drawerItemText"
                />

        </LinearLayout>

        <ImageView
            style="@style/drawerDivider"
            />

        <LinearLayout
            android:id="@+id/help"
            style="@style/drawerItemRoot"
            >

            <ImageView
                android:src="@drawable/ic_help"
                style="@style/drawerItemIcon"
                />

            <TextView
                android:text="@string/action_help"
                style="@style/drawerItemText"
                />

        </LinearLayout>

        <ImageView
            style="@style/drawerDivider"
            />

    </LinearLayout>

</ScrollView>